test/libhyperion/syntaxTests/pragma/blank_space_version.hyp
pragma hyperion ;
// ----
// ParserError 1684: (0-17): Invalid version pragma. Empty version pragma.
